# enterprise-agent-reference-architectures

./: .gitignore  404.html  CLAUDE.md  PROJECT.md  README.md  agents.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
assets/: full-reference.en.md  full-reference.md
docs/: agent-digest.en.md  agent-digest.md  glossary.en.md  glossary.md  index.en.md  index.md  patterns-index.yaml  reference-architecture.md  scenarios.yaml  selection-rules.yaml  vocabulary.yaml  wizard.en.md  wizard.md
docs/_machine/: building-blocks.json  decisions.json  departments.json  index.json  patterns.json  value-loop.json
docs/coding-agent-guide/: index.en.md  index.md
docs/decisions/: decision-guide.en.md  decision-guide.md  index.md
docs/integration/: adoption.en.md  adoption.md  cross-cutting-axes.en.md  cross-cutting-axes.md  department-examples.md  dependencies.md  dependency-chain.en.md  dependency-chain.md  portfolio.en.md  portfolio.md  principles.md  recipe.en.md  recipe.md  reference-architecture.md  roadmap.md  selection-guide.md  usecase-selection-guide.en.md  usecase-selection-guide.md  value-anti-patterns.en.md  value-anti-patterns.md  value-maturity-roadmap.en.md  (+1 more)
patterns/: index.html
reference/: source-unified-enterprise.md  source-unified-reference.md
schemas/: building-blocks.schema.json  decisions.schema.json  departments.schema.json  index.schema.json  patterns.schema.json
scripts/: build_bundle.sh  build_machine_index.py  build_nav.sh  check_sync.sh  validate_tags.py
search/: search_index.json
(+465 files in other folders)
