[project]
name = "enterprise-agent-reference-architectures"
version = "0.1.0"
description = "エンタープライズAIエージェント・アーキテクチャ・リファレンス"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.3.1",
    "pymdown-extensions>=10.7",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "mkdocs-redirects>=1.2",
]
